@@ -41,6 +41,10 @@ JH/14 Bug 2284: Fix DKIM signing for body lines starting with a pair of dots.
 
 JH/16 Fix ARC verification to do AS checks in reverse order.
 
+JH/18 Bug 2287: Fix the protocol name (eg utf8esmtp) for multiple messages
+      using the SMTPUTF8 option on their MAIL FROM commands, in one connection.
+      Previously the "utf8" would be re-prepended for every additional message.
+
 
 Exim version 4.91
 -----------------
